[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screens/MenuScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/MainMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/title.png" type="Texture" id=3]

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.5
margin_top = 80.0
margin_right = 141.5
margin_bottom = 263.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 283.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Stock Up On Nuts"

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 283.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Toggle Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteMusicButton" type="CheckButton" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 283.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.235294, 0.235294, 0.235294, 1 )
text = "Mute Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Sprite" parent="."]
position = Vector2( 301.899, 511.606 )
z_index = -60
texture = ExtResource( 3 )
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="toggled" from="VBoxContainer/MuteMusicButton" to="." method="_on_MuteMusicButton_toggled"]
